updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a legislative assistant and scheduler for a Rep. I graduated from Emory last year.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I live in Madison, Wisconsin, but I grew up in France and Florida.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>During my free time, I work on mobile game bots, play video games, and bake.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I love my current job but am looking to start my own business.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Madison, Wisconsin</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I am currently self-taught and can only read and edit code. I'd love to write from scratch.</p>
     </section>
 
     <footer id="footer">
