--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I'm a legislative assistant and scheduler for a Rep. I graduated from Emory last year.</p>
+      <p>I'm a legislative assistant. I graduated from Emory last year.</p>
       <h1>Where I'm From</h1>
       <p>I live in Madison, Wisconsin, but I grew up in France and Florida.</p>
       <h1>What are your favorite hobbies?</h1>
